--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,9 @@
+<% if @cat.count == 2%>
+<h2>Categories are already added!</h2>
+<% else %>
 <h1>New category</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', categories_path %>
+<% end %>
