--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,9 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+   
 </head>
-<body>
+<body onLoad="document.getElementById('AutoLink').click();document.getElementById('AutoLink2').click();" >
 
 	<div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
